--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>/Users/sjoshi/Documents/mywiki/tiddlers/#Principles of Reliable Data Transfer.tid#</li>
+
 <li>$:/config/Manager/Sort</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/full-screen</li>
@@ -178,8 +180,6 @@ Error message and password prompt
 <li>$:/SiteTitle</li>
 
 <li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -322,6 +322,8 @@ Error message and password prompt
 <li>Finite Difference Policy Gradient</li>
 
 <li>First Order Logic</li>
+
+<li>First Order Logic - An AI Perspective</li>
 
 <li>For Every and There Exists</li>
 
@@ -631,6 +633,17 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div title="/Users/sjoshi/Documents/mywiki/tiddlers/#Principles of Reliable Data Transfer.tid#" type=".tid#" revision="0" bag="default">
+<pre>created: 20200427040132647
+modified: 20200427040156885
+tags: [[Transport Layer]]
+title: Principles of Reliable Data Transfer
+type: text/vnd.tiddlywiki
+
+''NEED TO REDO WHEN STUDYING FOR MIDTERM''
+
+</pre>
+</div>
 <div created="20200203062147877" modified="20200203062200661" title="$:/config/Manager/Sort" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>tags</pre>
 </div>
@@ -10110,11 +10123,8 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200426213506203" modified="20200427040201674" title="$:/state/sidebar" revision="4" bag="default">
+<div created="20200427212046589" modified="20200428004553871" title="$:/state/sidebar" revision="6" bag="default">
 <pre>yes</pre>
-</div>
-<div created="20200427035935749" modified="20200427040120026" title="$:/state/tab/sidebar--595412856" revision="7" bag="default">
-<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -10128,7 +10138,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200426212814112" list="" modified="20200427035939451" title="$:/StoryList" revision="31" bag="default">
+<div created="20200427211950392" list="" modified="20200427231554257" title="$:/StoryList" revision="72" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10189,7 +10199,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200426212812608" modified="20200426212815921" title="$:/temp/search" revision="4" bag="default">
+<div created="20200427212036735" modified="20200427231123742" title="$:/temp/search" revision="100" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12949,6 +12959,47 @@ Example: Training AIBO to walk by Finite Difference Policy Gradient (AIBO walk p
 # [[Syntax of First Order Logic]]
 # [[Semantics of First Order Logic]]</pre>
 </div>
+<div created="20200427230559757" modified="20200428004538853" tags="[[UCLA CS 267A - Probabilistic Programming]] [[First Order Logic]] logic" title="First Order Logic - An AI Perspective" revision="13" bag="default">
+<pre>World now has:
+
+* Objects
+* Relations and Properties (relations of one objects)
+* Functions
+
+Examples:
+
+* One plus one equals three - objects: one, three, functions: plus, relations: equals
+* Square neighboring the Wumpus is smelly - objects: squares, Wumpus, Relation: neighboring, Properties: Smelly
+* Evil King John rules England in 1200 - objects: John, England, 1200, Relations: rules a relation between John England and 1200, Properties: Evil and King of John
+
+Refer to: [[Syntax of First Order Logic]], [[Semantics of First Order Logic]]
+
+* Predicates are a name for relations between objects
+* Atomic sentence is a predicate applied to terms
+* Underlying set is called the domain of discourse
+
+Propositionalization: convert first order logic to propositional logic
+
+* Thm - If a sentence is entailed by a first-order KB, it is entailed by a finite subset of the propositional KB
+* Idea: Iteratively grow the propositional KB
+* Church/Turing Thm - entailment in FOL is semi-decidable - Yes - means it will terminate, No - will never terminate for infinite
+
+Generalized Modus Ponens: Inference using substitution
+
+* $$\forall x, King(x) \land Greedy(x) \implies Evil(x)$$
+* $$King(John)$$
+* $$Greedy(John)$$
+
+Most General Unifier: minimum number of substitutions - avoid any unnecessary substitutions
+
+Subsumption Lattice: Sentence $$\alpha$$ subsumes $$\beta$$ iff there exists a substitution $$\theta$$ s.t. $$\alpha \theta = \beta$$: https://imgur.com/pKwwsay
+
+First Order Resolution - most general mechanism for reasoning with first order logic
+
+* $$KB \models \alpha? $$ is equivalent to $$UNSAT(KB \models \neg \alpha)$$
+
+Lifting Lemma: https://imgur.com/aJAGRkB - can use First Order Logical Reasoning to simultaneously do potentially infinite Propositional Logic Reasoning</pre>
+</div>
 <div created="20191227164059875" modified="20191227164351343" tags="math logic [[real analysis]]" title="For Every and There Exists" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Negation of a for every x, proposition is true is there exists x such that proposition is false
 * Can swap the order of two adjacent for every or two adjacent there exists without changing logical meaning
@@ -13237,7 +13288,7 @@ Universal Sets of Operations:
 * For quantum computing H, CCNOT is a universal set that can express all real unitary matrices, adding Scale $$\begin{pmatrix} 1 &amp; 0 \\ 0 &amp; i \end{pmatrix}$$ includes all complex matrices as well. 
 * $$R_\theta = \begin{pmatrix} 1 &amp; 0 \\ 0 &amp; e^{i\theta} \end{pmatrix}$$ can be used to substitute Scale and make the universal set as well</pre>
 </div>
-<div created="20200420231413286" modified="20200421005007142" tags="[[artificial intelligence]] [[UCLA CS 267A - Probabilistic Programming]]" title="General Probabilistic Programming Inference" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200420231413286" modified="20200427230012569" tags="[[artificial intelligence]] [[UCLA CS 267A - Probabilistic Programming]]" title="General Probabilistic Programming Inference" type="text/vnd.tiddlywiki" revision="13" bag="default">
 <pre>How to deal with continuous variables?
 
 * If only continuous variables - Stan &amp; Hamiltonian Monte-Carlo
@@ -13253,7 +13304,61 @@ __Anglican - General Probabilistic Program Inference__
 
 Model a simple nested gaussian distribution: https://imgur.com/Qq7OoJI
 
-Hidden Markov Model: https://imgur.com/lhvzjeB</pre>
+Hidden Markov Model: https://imgur.com/lhvzjeB
+
+Bayesian Learning:
+
+* Given a program $$Pr(X, Y)$$ and output y infer a distribution over X: $$Pr(X | y) = \frac{Pr(y | X) Pr(X)}{Pr(y)} \propto Pr(y|X) Pr(X)$$
+* In machine learning, X is often $$\theta$$ - the parameters 
+
+Example: https://imgur.com/vkJDion
+
+Unbounded Recursion: Geometric Distribution - https://imgur.com/u0l8gnD
+
+Constrained Stochastic Simulation: https://imgur.com/shgtxGa - simulator is angry birds physics engine, program basically first samples from random poisson and normal distributions, the number of platforms and their position and then conditions on the fact that 4 land in box - and then sample platform positions for us with this - we will get platforms such that 4 balls will land in the box and rest will fall outside
+
+
+__An Inference Framework for Universal Probabilistic Programming Languages__
+
+
+Traces: https://imgur.com/Sc01Teh
+
+Goodness of trace - probability of paths in trace: 
+
+* probabilities are now conditioned on the observe that observes that $$x_2 + \text{ some noise } = 1$$ - so observe that with some noise that $$x_2 = 1$$
+* https://imgur.com/68uOyUJ
+
+Trace:
+
+* N observers: $$\{(g_i - \text{the type of distribution}, \phi_i - \text{parameters of the distribution}, y_i - \text{value observed}\}^N_{i = 1}$$
+* M samples: $$\{f_j - \text{the type of distribution}, \theta_j - \text{parameters of the distribution}\}^M_{i = 1}$$ 
+* M sampled values: $$\{x_j\}^M_{j = 1}$$
+
+Trace Probability:
+
+* Unnormalized - $$\gamma(x) :\equiv p(x, y) = \prod_{i = 1}^N g_i (y_i | \phi_i) \prod^M_{j = 1} f_i (x_j | \theta_j)$$ 
+* Hides the true dependency as the parameters of the distributions may depend on previous sampled values and this should actually be https://imgur.com/fWZtEmC, to show this dependence
+
+Inference Goal:
+
+* Posterior over traces: $$\pi(x) = p(x | y) = \frac{\gamma(x)}{\int \gamma(x) dx} $$
+* Output: $$E[z] - \text{probability of alarm in bayesian network} = E[Q(x)] - \text{is alarm true in world x} = \int Q(x) \pi(x) dx$$ where $$\pi(x)$$ is the probability of world x
+
+__Three Base Algorithms__
+
+Likelihood Weighting: 
+
+* A generalization of rejection sampling - similar to how in rejection sampling, we execute program k times and if any execution path violates an observe statement than just delete them and compute probability now on remaining samples
+* Idea here is that instead of having hard observes since we are assuming everything is observed with some noise, observing a certain value makes other values less likely not impossible
+
+Importance Sampling:  $$E_{X \sim P}[f(X)] = \sum P(X) f(X) = \sum Q(X) \frac{P(X)}{Q(X)} f(X) = E_{X \sim Q}[\frac{P(X)}{Q(X)} f(X)] $$
+
+* Run K independent copies of program simulation from the prior: $$q(x^k) = \pi^{M^k}_{j = 1} f_j (x_j^k | \theta_j^k)$$
+* Accumulate unnormalized weights = $$w(x^k) = \frac{\gamma(x^k)}{q(x^k)} = \prod^{N^k}_{i = 1} g_i^k (y_i^k | \phi_i^k)$$
+* Normalize weights: $$W^k = \frac{w(x^k)}{\sum^K_{l=1} w(x^l)}$$ - using self normalized important sampling here 
+* Monte Carlo Integration: $$E_\pi[Q(x)] = \sum^K_{k = 1} W^k Q(x^k)$$ since we can approximate from K samples the $$E_{X \sim Q}[\frac{P(X)}{Q(X)} f(X)] $$ by $$\sum^K_{k = 1} w(x_i) f(x_i)$$ where $$x_i \sim Q(x)$$
+
+</pre>
 </div>
 <div created="20200308212845972" modified="20200308214932933" tags="[[graph theory]]" title="Generalizations of Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Hyper-graphs - edges can join any number of nodes
@@ -15282,7 +15387,7 @@ see also: [[Standardization of Features]]</pre>
 <div author="Siddharth Joshi" created="20191122040546770" modified="20191122040907778" tags="[[needs expanding]] [[machine learning]] [[learning algorithm selection]]" title="Number of Features and Examples" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Some models like [[Neural Networks]] and [[Gradient Boosting Algorithms]] can handle large datasets with millions of features even whereas others like [[SVMs |Support Vector Machine]] have a much lower capacity. </pre>
 </div>
-<div created="20200220031706696" modified="20200222070930626" tags="[[Model-Free Control]]" title="Off Policy Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200220031706696" modified="20200427222959735" tags="[[Model-Free Control]]" title="Off Policy Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>* Evaluate target policy $$\pi(a | s)$$ to compute $$v_\pi(s)$$ or $$q_\pi(s, a)$$
 * While following behavior policy $$\mu(a | s)$$
 * Learn from observing humans or other agents
@@ -15889,7 +15994,7 @@ What transport service does an app need:
 * TCP - reliable, flow control - sender won't overwhelm receiver, congestion control - throttle sender when network overloaded, doesn't provide - timing minimum throughput guarantee, security; connection-oriented - setup required between client and server processes
 * UDP - unreliable but very fast - audio, video can tolerate some packet loss but delay must be very small, doesn't provide the things that TCP does - more flexibility at application layer for developers</pre>
 </div>
-<div created="20200427040132647" modified="20200427040155812" tags="[[Transport Layer]]" title="Principles of Reliable Data Transfer" revision="11" bag="default">
+<div created="20200427040132647" modified="20200427040156885" tags="[[Transport Layer]]" title="Principles of Reliable Data Transfer" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>''NEED TO REDO WHEN STUDYING FOR MIDTERM''
 
 </pre>
@@ -17052,7 +17157,7 @@ We use metavariables to  name arbitrary propositional variables - analogous to w
 
 Let p be a propositional variable - means p is one of $$A_i$$ but we haven't specified which</pre>
 </div>
-<div created="20200420170350307" modified="20200422173021650" tags="[[First Order Logic]] logic" title="Syntax of First Order Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200420170350307" modified="20200427211953087" tags="[[First Order Logic]] logic" title="Syntax of First Order Logic" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>__Syntax of LPCI__
 
 Def: A vocabulary or signature is a quadruple $$\tau = (Const, Rel, Funct, arity)$$
@@ -17136,16 +17241,7 @@ Can be extended to simultaneous substitution: $$\alpha\{v_1:\equiv t_1, ..., v_n
 
 Example: https://imgur.com/7sp8Yae
 
-Note that in general $$\alpha\{v_1 :\equiv t_1\}\{v_2 :\equiv t_2\} \not\equiv \alpha\{v_1:\equiv t_1, ..., v_n :\equiv t_n\}$$ - sequential replacement not equivalent to simultaneous replacement
-
-A term $$t_i$$ is free for $$v_i$$ in a substitution if no occurrence of a variable in $$t_i$$ is bound in the result of this substitution. (We only form free substitutions - leads to confusion)
-
-https://imgur.com/Caf1eV9
-
-Extended terms and formula - if $$\alpha$$ is a term which includes all the free variables of $$\alpha$$
-
-* $$\alpha (v_1, ..., v_n) :\equiv (\alpha (v_1, ..., v_n))$$
-* thus we get $$\alpha (t_1, ..., t_n) :\equiv \alpha\{v_1:\equiv t_1, ..., v_n :\equiv t_n\}$$
+Note that in general $$\alpha\{v_1 :\equiv t_1\}\{v_2 :\equiv t_2\} \not\equiv \alpha\{v_1:\equiv t_1, ..., v_n :\equiv t_n\}$$
 
 </pre>
 </div>
@@ -17897,7 +17993,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 * [[Path Connectedness]]
 </pre>
 </div>
-<div created="20200417155924595" modified="20200426233251793" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200417155924595" modified="20200426233251793" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Transport Layer Services]]
 # [[Multiplexing and Demultiplexing]]
 # [[Connectionless Transport: UDP]]
@@ -17959,13 +18055,14 @@ Neither provides delay or bandwidth guarantees</pre>
 <div created="20200212062244378" modified="20200219024018484" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Historical Perspective on AI]]</pre>
 </div>
-<div created="20200412210020323" modified="20200421000439668" tags="[[artificial intelligence]] ucla" title="UCLA CS 267A - Probabilistic Programming" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200412210020323" modified="20200427230552322" tags="[[artificial intelligence]] ucla" title="UCLA CS 267A - Probabilistic Programming" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre># [[Introduction to Probabilistic Programming]]
 # [[Propositional Reasoning]]
 # [[Propositional Probability]]
 # [[Basics of Probabilistic Programming Languages]]
 # [[Discrete Probabilistic Program Inference]]
-# [[General Probabilistic Programming Inference]]</pre>
+# [[General Probabilistic Programming Inference]]
+# [[First Order Logic - An AI Perspective]]</pre>
 </div>
 <div created="20200126032331506" modified="20200210191753424" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
