--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -192,8 +188,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/theme</li>
 
@@ -10128,12 +10122,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200505035400617" modified="20200505070027262" title="$:/state/sidebar" revision="8" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200505035342371" modified="20200505035342371" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -10146,7 +10134,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200505035344552" list="[[Constraint Satisfaction Problems]]" modified="20200505061113406" title="$:/StoryList" revision="61" bag="default">
+<div list="Welcome" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10206,9 +10194,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200505035438636" modified="20200505061110004" title="$:/temp/search" revision="22" bag="default">
-<pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -11817,7 +11802,7 @@ UDP checksum - detect flipped bits in transmitted segment
 
 </pre>
 </div>
-<div created="20200416170442510" modified="20200505070018344" tags="[[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[artificial intelligence]]" title="Constraint Satisfaction Problems" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<div created="20200416170442510" modified="20200505070019552" tags="[[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[artificial intelligence]]" title="Constraint Satisfaction Problems" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Variables:
 
 * Each variable $$X_i$$  has a number of values
@@ -13470,7 +13455,7 @@ Proof: Define $$S = \{n | A(n) $$ is true$$\}$$
 
 By axiom, S = N</pre>
 </div>
-<div created="20200505035539556" modified="20200505054619070" tags="logic [[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[artificial intelligence]]" title="Inference in Propositional Logic" revision="18" bag="default">
+<div created="20200505035539556" modified="20200505054620280" tags="logic [[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[artificial intelligence]]" title="Inference in Propositional Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Techniques: 
 
 * Enumerating Models
@@ -14385,7 +14370,7 @@ Hyperparameters in NNC:
 
 </pre>
 </div>
-<div created="20200504223902197" modified="20200505053929381" tags="[[artificial intelligence]] [[UCLA CS 161 - Fundamentals of Artificial Intelligence]]" title="Knowledge Representation &amp; Reasoning: Logic" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200504223902197" modified="20200505053930473" tags="[[artificial intelligence]] [[UCLA CS 161 - Fundamentals of Artificial Intelligence]]" title="Knowledge Representation &amp; Reasoning: Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Symbolic Representation v/s Numeric Representation (using probability theory)
 
 Model v/s Learn - function approximation 
@@ -18695,7 +18680,7 @@ In such games, more focus on good evaluation functions than depth. </pre>
 # [[Application Layer]]
 # [[Transport Layer]]</pre>
 </div>
-<div created="20200402185643352" modified="20200505035530241" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200402185643352" modified="20200505035531331" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Introduction to Artificial Intelligence]]
 # [[Introduction to Lisp]]
 # [[Problem Solving using Search]]
