Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,8 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/sidebar</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -294,10 +292,6 @@ Error message and password prompt
 <li>Do Calculus</li>
 
 <li>Domain Name System (DNS)</li>
-
-<li>Draft 2 of 'Transmission Control Protocol (TCP)'</li>
-
-<li>Draft of 'Transmission Control Protocol (TCP)'</li>
 
 <li>Electronic Mail (Email)</li>
 
@@ -10142,9 +10136,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200514181814014" modified="20200514210436081" title="$:/state/sidebar" revision="12" bag="default">
-<pre>yes</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -10157,7 +10148,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200514181537331" list="[[Transmission Control Protocol (TCP)]]" modified="20200514210349211" title="$:/StoryList" revision="64" bag="default">
+<div created="20200515024106532" list="[[Transmission Control Protocol (TCP)]] Welcome" modified="20200515024106532" title="$:/StoryList" revision="2" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10218,7 +10209,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200514181534880" modified="20200514210409517" title="$:/temp/search" revision="8" bag="default">
+<div created="20200515024104720" modified="20200515024108251" title="$:/temp/search" revision="4" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12541,12 +12532,6 @@ DNS protocol messages: https://imgur.com/Xxhf8FW, https://imgur.com/VQvylnz
 
 
 </pre>
-</div>
-<div modified="20200514193047741" title="Draft 2 of 'Transmission Control Protocol (TCP)'" revision="2353" bag="default">
-<pre></pre>
-</div>
-<div modified="20200514185945853" title="Draft of 'Transmission Control Protocol (TCP)'" revision="3545" bag="default">
-<pre></pre>
 </div>
 <div created="20200413204659846" modified="20200423225513254" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two components:
@@ -15077,7 +15062,7 @@ Example: https://imgur.com/JSGaogc, https://imgur.com/9VuO5oP
 
 Q - how to deal with non-fixed probability - non-stationary MDPs, augment MDP to represent it (w possible infinite states)</pre>
 </div>
-<div created="20200212022712329" modified="20200514181916566" tags="[[Markov Decision Processes from scratch]]" title="Markov Reward Processes" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200212022712329" modified="20200514181916566" tags="[[Markov Decision Processes from scratch]]" title="Markov Reward Processes" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>A Markov reward process is a Markov chain with value judgement:
 
 * $$&lt;S, P, R, \gamma&gt;$$
@@ -18977,7 +18962,7 @@ Proof:
 * [[Path Connectedness]]
 </pre>
 </div>
-<div created="20200430061116963" modified="20200514210040632" tags="[[Transport Layer]]" title="Transmission Control Protocol (TCP)" type="text/vnd.tiddlywiki" revision="25" bag="default">
+<div created="20200430061116963" modified="20200514210041720" tags="[[Transport Layer]]" title="Transmission Control Protocol (TCP)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Overview:
 
 * point to point - one sender, one receiver
@@ -19119,7 +19104,7 @@ Summary: https://imgur.com/n1Morq4
 
 Examples: https://imgur.com/UKYvuSG, https://imgur.com/8gnbJLZ</pre>
 </div>
-<div created="20200417155924595" modified="20200514181551360" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200417155924595" modified="20200514181552448" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Transport Layer Services]]
 # [[Multiplexing and Demultiplexing]]
 # [[Connectionless Transport: UDP]]
