Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/shortcuts-mac/excise</li>
@@ -177,8 +179,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/sidebar</li>
-
 <li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
@@ -192,8 +192,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/theme</li>
 
@@ -674,6 +672,9 @@ Error message and password prompt
 </div>
 <div created="20191121035135764" modified="20191121035137814" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>hide</pre>
+</div>
+<div created="20200517035208272" modified="20200517035209311" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>show</pre>
 </div>
 <div created="20191121010924297" modified="20200204223614728" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>yes</pre>
@@ -10142,11 +10143,8 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200515154412925" modified="20200515182057339" title="$:/state/sidebar" revision="4" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200515154407818" modified="20200515154407818" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200517035227180" modified="20200517035227180" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -10160,7 +10158,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200515154410832" list="" modified="20200515164325941" title="$:/StoryList" revision="43" bag="default">
+<div list="Welcome" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10221,11 +10219,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200515154403168" modified="20200515182058761" title="$:/temp/search" revision="11" bag="default">
-<pre></pre>
-</div>
-<div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>$:/themes/tiddlywiki/vanilla</pre>
+<div created="20200227023745997" modified="20200517035230657" title="$:/theme" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10336,7 +10331,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191121035138747" modified="20191121035148674" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20191121035138747" modified="20200517035114744" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>classic</pre>
 </div>
 <div created="20200131001213334" modified="20200131002039968" tags="[[computer science]] [[talk summary]] [[data structures]] neuroscience" title="A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -13610,7 +13605,7 @@ Proof: Define $$S = \{n | A(n) $$ is true$$\}$$
 
 By axiom, S = N</pre>
 </div>
-<div created="20200515164332130" modified="20200515182024806" tags="[[artificial intelligence]] [[First Order Logic]]" title="Inference in First Order Logic" revision="9" bag="default">
+<div created="20200515164332130" modified="20200515182025922" tags="[[artificial intelligence]] [[First Order Logic]]" title="Inference in First Order Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__Universal Instantiation__
 
 Take a universally quantified sentence and replace with specific instances
@@ -19295,7 +19290,7 @@ In such games, more focus on good evaluation functions than depth. </pre>
 # [[Application Layer]]
 # [[Transport Layer]]</pre>
 </div>
-<div created="20200402185643352" modified="20200515164324490" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="6" bag="default">
+<div created="20200402185643352" modified="20200516032947605" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Introduction to Artificial Intelligence]]
 # [[Introduction to Lisp]]
 # [[Problem Solving using Search]]
@@ -19304,7 +19299,8 @@ In such games, more focus on good evaluation functions than depth. </pre>
 # [[Knowledge Representation &amp; Reasoning: Logic]]
 # [[Inference in Propositional Logic]]
 # [[First Order Logic]], [[First Order Logic - An AI Perspective]]
-# [[Inference in First Order Logic]]</pre>
+# [[Inference in First Order Logic]]
+# </pre>
 </div>
 <div created="20200131000351410" modified="20200312211523121" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]]
